<resources>
    <string name="app_name">SFA Source</string>
    <string name="action_settings">Settings</string>
    <string name="returns_option">Returns</string>
    <string name="returns_sign">Signature</string>
    <string name="title_activity_validate_url">ValidateURL</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_loading_page">LoadingPage</string>
    <string name="external_dir">GetSignature</string>
    <string name="action_search">Search</string>
    <string name="action_new">NewCustomer</string>
    <string name="action_print">Printer</string>
    <string name="searching_printers">Searching for printers&#8230;</string>
    <string name="no_bluetooth_support">Your device doesn\'t support bluetooth</string>
    <string name="bluetooth_disabled">Bluetooth has not enabled</string>
    <string name="title_please_wait">Please Wait</string>
    <string name="no_printers_found">No Printers Found</string>
    <string name="unknown_printer">Unknown printer. Only Zebra MZ 320 printer is supported</string>
    <string name="printed_successfully">Printed successfully</string>
    <string name="unable_to_find_printer">Unable to find printer. Make sure the printer is switched ON</string>
    <string name="connecting_to_printer">Connecting to printer&#8230;</string>
    <string name="printing_in_progress">Printing in progress&#8230;</string>
    <string name="is_not_valid_mac_address"> is not a valid MAC Address</string>
    <string name="search_printer">Search Printer</string>
    <string name="creating_file_for_printing">Creating file for printing&#8230;</string>
    <string name="error_creating_file_for_printing">Error in creating file for printing</string>
    <string name="generating_invoice">Generating Invoice for printing&#8230;</string>
    <string name="generating_so">Generating SO for printing&#8230;</string>
    <string name="generating_settlement">Generating Settlement for printing&#8230;</string>
    <string name="generating_sr">Generating SR for printing&#8230;</string>
    <string name="generating_receipt">Generating Receipt for printing&#8230;</string>
    <string name="generating_do">Generating DO for printing&#8230;</string>
    <string name="consignment_printpreview">Print Preview&#8230;</string>
    <string name="generating_ps">Generating ProductStock for printing&#8230;</string>
    <string name="error_configure_printer">Please configure your printer</string>
    <string name="title_bar_left_button">Title bar left button</string>
    <string name="title_bar_right_button">Title bar right button</string>
    <string name="add_button">Add Button</string>
    <string name="print">Print</string>
    <string name="ok">OK</string>
    <string name="generating_transfer">Generating Transfer for printing&#8230;</string>
    <string name="generating_consignment">Generating Consignment for printing&#8230;</string>
    <string name="generating_consignment_return">Generating Consignment Return for printing&#8230;</string>
    <string name="downloading1">Downloading from server.</string>
    <string name="downloading2">Downloading from server..</string>
    <string name="downloading3">Downloading from server...</string>
    <string name="downloading_general_settings">Downloading GeneralSettings&#8230;</string>
    <string name="downloading_usermaster">Downloading UserMaster&#8230;</string>
    <string name="downloading_get_company">Downloading GetCompany&#8230;</string>
    <string name="downloading_get_customer">Downloading GetCustomer&#8230;</string>
    <string name="downloading_get_currency">Downloading GetCurrency&#8230;</string>
    <string name="downloading_get_serverdate">Downloading ServerDate&#8230;</string>
    <string name="downloading_get_nextno">Downloading NextRunningNumber&#8230;</string>
    <string name="downloading_get_location">Downloading GetLocation&#8230;</string>
    <string name="downloading_get_userpermission">Downloading User Permission&#8230;</string>
    <string name="downloading_get_category">Downloading GetCategory&#8230;</string>
    <string name="downloading_get_subcategory">Downloading GetSubCategory&#8230;</string>
    <string name="downloading_get_companylogo">Downloading GetCompanyLogo&#8230;</string>
    <string name="downloading_get_product">Downloading GetProduct&#8230;</string>
    <string name="downloading_get_productbarcode">Downloading GetProductBarcode&#8230;</string>
    <string name="downloading_get_invoiceheader">Downloading GetInvoiceHeader&#8230;</string>
    <string name="downloading_get_invoicedetail">Downloading GetInvoiceDetail&#8230;</string>
    <string name="downloading_get_invoiceheaderbyinvoiceno">Downloading GetInvoiceHeaderByInvoiceNo&#8230;</string>
    <string name="downloading_get_invoicecartondetail">Downloading GetInvoiceCartonDetail&#8230;</string>
    <string name="data_downloaded_successfully">Data Downloaded Successfully&#8230;</string>
    <string name="completed">Completed&#8230;</string>
    <string name="data_uploaded_successfully">Data uploaded Successfully&#8230;</string>
    <string name="customer_uploaded_successfully">Customer uploaded Successfully&#8230;</string>
    <string name="invoice_uploaded_successfully">Invoice uploaded Successfully&#8230;</string>
    <string name="receipt_uploaded_successfully">Receipt uploaded Successfully&#8230;</string>
    <string name="so_uploaded_successfully">Sales Order uploaded Successfully&#8230;</string>
    <string name="data_upload_failed">Data upload Failed&#8230;</string>
    <string name="invoice_upload_failed">Invoice upload Failed&#8230;</string>
    <string name="receipt_upload_failed">Receipt upload Failed&#8230;</string>
    <string name="customer_upload_failed">Customer upload Failed&#8230;</string>
    <string name="so_upload_failed">Sales Order upload Failed&#8230;</string>
    <string name="error_downloading_data_no_network_connection">Error downloading data - No Network connection</string>
    <string name="error_downloading_data">Error downloading data</string>
    <string name="invoice_printpreview">Invoice Print Preview</string>
    <string name="receipt_printpreview">Receipt Print Preview</string>
    <string name="downloading_get_bank">Downloading GetBank&#8230;</string>
    <string name="downloading_get_paymode">Downloading GetPayMode&#8230;</string>
    <string name="downloading_get_invoiceheaderonlyhavebalance">Downloading InvoiceHeaderOnlyHaveBalance&#8230;</string>
    <string name="downloading_get_receiptheader">Downloading GetReceiptHeader&#8230;</string>
    <string name="downloading_get_receiptdetail">Downloading GetReceiptDetail&#8230;</string>
    <string name="downloading_get_productstock">Downloading ProductStock&#8230;</string>
    <string name="signimage_uploaded_successfully">Signature Image uploaded Successfully&#8230;</string>
    <string name="signimage_upload_failed">Signature Image upload Failed&#8230;</string>
    <string name="download">Download</string>
    <string name="do_you_want_to_download_data">Do you want to download data</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="downloading_get_area">Downloading GetArea&#8230;</string>
    <string name="downloading_get_terms">Downloading GetTerms&#8230;</string>
    <string name="downloading_get_customergroup">Downloading GetCustomerGroup&#8230;</string>
    <string name="upload_data">Uploading&#8230;</string>
    <string name="sync_data">Synchronizing data&#8230;</string>
    <string name="upload_customer">Uploading Customer&#8230;</string>
    <string name="upload_invoice">Uploading Invoice&#8230;</string>
    <string name="upload_receipt">Uploading Receipt&#8230;</string>
    <string name="switch_to_online">Switch to online</string>
    <string name="switch_to_offine">Switch to offline</string>
    <string name="upload">Upload/Sync</string>
    <string name="online_status">You have internet connection. Do you want to continue in online</string>
    <string name="offline_alert">You don\'t have internet connection .Please Enable Network Connectivity!!!</string>
    <string-array name="offline_status">
        <item>Pending To Upload</item>
        <item>All Offline Data</item>
    </string-array>
    <string name="switch_to_online_status">Do you want to upload the data to server and switch to online?</string>
    <string name="switch_to_offline_status">Do you want to download data from server and switch to offline?</string>
    <string name="upload_status">Do you want to upload and synchronize the data</string>
    <string name="no_data_upload">No Data to Upload&#8230;</string>
    <string name="salesorder_printpreview">SalesOrder Print Preview</string>
    <string name="deliveryorder_printpreview">DeliveryOrder Print Preview</string>
    <string name="salesreturn_printpreview">Sales Return Print Preview</string>
    <string name="stockrequest_printpreview">Stock Request Print Preview</string>
    <string name="Transfer_printpreview">Transfer Print Preview</string>
    <string name="gra_printpreview">GRA Print Preview</string>
    <string name="error_showing_image_no_network_connection">Error showing image - No Network connection</string>
    <string name="error_showing_image">No more image</string>
    <string name="url_title_image">URL_Title_Image</string>
    <string name="settings">Settings</string>
    <string name="version">Version : 1</string>
    <string name="domain_url">Domain URL</string>
    <string name="validate">Validate</string>
    <string name="splash_title_image">Splash_Title_Image</string>
    <string name="connecting">Connecting&#8230;</string>
    <string name="copyright">© Winapp Solutions Pte Ltd 2014</string>
    <string name="website">www.winapp.com.sg</string>
    <string name="login_title_image">Login_Title_Image</string>
    <string name="login">Login</string>
    <string name="username">User ID</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="home_title_image">Home_Title_Image</string>
    <string name="home_title_name">Frozen Management</string>
    <string name="good_receive">Good Receive</string>
    <string name="sales_order">Sales Order</string>
    <string name="delivery_order">Delivery Order</string>
    <string name="consignment">Consignment</string>
    <string name="consignment_return">Consignment Return</string>
    <string name="consignment_stock">Consignment Stock</string>
    <string name="consignment_stock_take">Consignment Stock Take</string>
    <string name="invoice">Invoice</string>
    <string name="invoice_summary">Invoice Summary</string>
    <string name="delivery_summary">Delivery Summary</string>
    <string name="sales_return">Sales Return</string>
    <string name="receipts">Receipts</string>
    <string name="customer_list">Customer List</string>
    <string name="product_stock">Product Stock</string>
    <string name="stock_request">Stock Request</string>
    <string name="transfer">Transfer</string>
    <string name="catalog">Catalog</string>
    <string name="add_product">Add Product</string>
    <string name="remarks">Remarks</string>
    <string name="product_code">Product Code</string>
    <string name="carton_qty">Carton Qty</string>
    <string name="loose_qty">Loose Qty</string>
    <string name="qty">Qty</string>
    <string name="location">Location</string>
    <string name="stock_take_date">Stock Take Date</string>
    <string name="product_name"> ProductName</string>
    <string name="pcs_per_carton">PCS Per Carton</string>
    <string name="current_qty">Current Qty</string>
    <string name="image">ImageView</string>
    <string name="no">No</string>
    <string name="do_you_want_to_update">New version is available. Do you want to update?</string>
    <string name="english">English</string>
    <string name="chinese">中文（简体）</string>
    <string name="change_language">Change Language</string>
</resources>