<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/header_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_bg"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/st_codefield"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="3dip"
            android:layout_weight="3.5"
            android:background="#F0F9FF"
            android:editable="false"
            android:hint="@string/product_code"
            android:inputType="none"
            android:paddingLeft="8dp"
            android:singleLine="true"
            android:textColor="#3a3a3c"
            android:textSize="16sp"
            android:typeface="sans" >
        </EditText>

        <EditText
            android:id="@+id/st_namefield"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginBottom="3dip"
            android:layout_marginLeft="3dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="3dip"
            android:layout_weight="3.4"
            android:background="#F0F9FF"
            android:editable="false"
            android:gravity="center_vertical"
            android:hint="@string/product_name"
            android:inputType="none"
            android:paddingLeft="8dp"
            android:singleLine="true"
            android:textColor="#3a3a3c"
            android:textSize="16sp"
            android:typeface="sans" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dip"
        android:background="@drawable/header_bg"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dip"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="@string/carton_qty"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="3dip"
            android:layout_weight="1.1"
            android:gravity="center|left"
            android:text="@string/loose_qty"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="3dip"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="@string/qty"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dip"
            android:layout_weight=".5"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_bg"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/st_cartonQty"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="3dip"
            android:layout_weight="2"
            android:background="@android:color/white"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:inputType="number" >
        </EditText>

        <EditText
            android:id="@+id/st_looseQty"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="3dip"
            android:layout_weight="2"
            android:background="@android:color/white"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:inputType="number" >
        </EditText>

        <EditText
            android:id="@+id/st_qty"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="3dip"
            android:layout_weight="2"
            android:background="@android:color/white"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:inputType="number" >
        </EditText>

        <ImageButton
            android:id="@+id/clear_btn"
            style="@style/button_style"
            android:layout_width="40dip"
            android:layout_height="38dip"
            android:layout_margin="3dp"
            android:contentDescription="@string/add_button"
            android:src="@mipmap/ic_clear_btn" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dip"
        android:background="@drawable/header_bg"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/st_currentQty_lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dip"
            android:layout_weight=".7"
            android:gravity="center"
            android:inputType="none"
            android:text="@string/current_qty"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/st_currentQty"
            android:layout_width="0dp"
            android:layout_height="35dip"
            android:layout_margin="4dip"
            android:layout_weight=".7"
            android:background="@drawable/labelbg"
            android:gravity="center" />

        <TextView
            android:id="@+id/st_pcsperQty_lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:gravity="center"
            android:text="@string/pcs_per_carton"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/st_pcsperQty"
            android:layout_width="0dp"
            android:layout_height="35dip"
            android:layout_margin="4dp"
            android:layout_weight=".7"
            android:background="@drawable/labelbg"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout5"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_gravity="bottom|center"
        android:layout_margin="3dip"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/mbt_DialogAction1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:textColor="#000000"
            android:textSize="13sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/mbt_DialogAction2"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:textColor="#000000"
            android:textSize="13sp"
            android:visibility="visible" />
    </LinearLayout>

</LinearLayout>