<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@drawable/home_bg">
        <TextView
            android:id="@+id/title"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center|left"
            android:text=""
            android:paddingLeft="15dip"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            android:visibility="visible" />

    </LinearLayout>
    <TextView
        android:id="@+id/message"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:padding="5dip"
        android:text="@string/do_you_want_to_update"
        android:gravity="center|left"
        android:textStyle="normal"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/black"
        android:layout_height="60dip" />
    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
      >

      <!--  <Button
            android:id="@+id/no"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:layout_margin="5dip"

            android:background="@drawable/button_bg"
            android:layout_marginLeft="5dip"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:text="@string/no"
            />-->
        <Button
            android:id="@+id/no"
            style="@style/button_style"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="36dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/no" />
        <Button
            android:id="@+id/yes"
            style="@style/button_style"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="36dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/yes" />
       <!-- <Button
            android:id="@+id/yes"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:layout_margin="5dip"
            android:background="@drawable/button_bg"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:text="@string/yes"
            />-->

    </LinearLayout>

</LinearLayout>